# debank-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: transaction_safety_demo.py  usage_examples.py
src/mcp_server_debank/: __init__.py  advanced_tools.py  client.py  models.py  portfolio_tools.py  server.py  validators.py
tests/: __init__.py  conftest.py  test_advanced_tools.py  test_client.py  test_tools.py  test_tools_comprehensive.py  test_validators.py
